Bug 310598 - Ctrl+number shortcuts assigned to change the number of columns conflict with global shortcuts
Summary: Ctrl+number shortcuts assigned to change the number of columns conflict with ...
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-24 12:24 UTC by Greg Bouzakis
Modified: 2012-11-24 21:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Greg Bouzakis 2012-11-24 12:24:16 UTC
Contacts uses Ctrl+{1,2,3} to adjust the number of columns but those conflict with the global Ctrl+N keyboard shortcuts kontact uses in order to change the displayed application.
That means that if you switch to contacts you cant move with the keyboard to eg. kmail and get a "The key sequence 'Ctrl+2' is ambiguous. Use 'Configure Shortcuts' from the 'Settings' menu to solve the ambiguity. No action will be triggered." message as Ctrl+2 is assigned to both "Two columns" for Contacts, as well as Mail for kontact.

Reproducible: Always

Steps to Reproduce:
1. Open kontact
2. Press Ctrl+3 to switch to Contacts.
3. Press any of the Ctrl+1, Ctrl+2 or Ctrl+3 keyboard combinations.
4. Get conflicting shortcut informational message
Comment 1 Allen Winter 2012-11-24 14:46:23 UTC
Confirmed.

Let's call this a bug in kaddressbook.  Kontact owns the Ctrl+1, Ctrl+2... shortcuts forever.

KAddressbook needs to change (or remove) these shortcuts.
Comment 2 Jonathan Marten 2012-11-24 17:33:17 UTC
Suppose I should fix this, since it was me that introduced these shortcuts.

Are Ctrl+Shift+number or Ctrl+Alt+number currently assigned in Kontact?
Comment 3 Greg Bouzakis 2012-11-24 17:38:18 UTC
No. Kontact just has F1 for help, the Ctrl+N keys and Shift+F1 for 'What's this'
Comment 4 Jonathan Marten 2012-11-24 21:08:30 UTC
Git commit 06ca53e1397f783a3db59a8b179fa4efa3199e94 by Jonathan Marten.
Committed on 24/11/2012 at 22:02.
Pushed by marten into branch 'master'.

Use CTRL+SHIFT+n for view modes, CTRL+n already used in Kontact
FIXED-IN:4.10

M  +3    -3    kaddressbook/mainwidget.cpp

http://commits.kde.org/kdepim/06ca53e1397f783a3db59a8b179fa4efa3199e94