Use CTRL+SHIFT+n for view modes, CTRL+n already used in Kontact

BUG:310598
FIXED-IN:4.10